syntax = "proto3";

package mpb;

option go_package = "./mpb";

message AptosAccount {
    string sequence_number = 1;
    string authentication_key = 2;
}

message AptosGetResources {
    string type = 1;
    AptosResourceData data = 2;
}

message AptosResourceData {
    string authentication_key = 1;
    AptosEvent coin_register_events = 2;
    string guid_creation_num = 3;
    AptosEvent key_rotation_events = 4;
    AptosCapabilityOffer rotation_capability_offer = 5;
    string sequence_number = 6;
    AptosCapabilityOffer signer_capability_offer = 7;
    AptosCoin coin = 8;
    AptosEvent deposit_events = 9;
    bool frozen = 10;
    AptosEvent withdraw_events  = 11;
}

message AptosEvent {
    string counter = 1;
    AptosGuid guid = 2;
}

message AptosGuid {
    AptosGuidId id = 1;
}

message AptosGuidId {
    string addr = 1;
    string creation_num = 2;
}

message AptosCapabilityOffer {
    message For {
        repeated string vec = 1;
    }
    For for = 1;
}

message AptosCoin {
    string value = 1;
}

// moralis
message MoralisNFTsData{
    string cursor = 1;
    repeated MoralisNFTData result = 2;
}

message MoralisNFTData {
    string amount = 1;
    string collection_data_id_hash = 2;
    string collection_name = 3;
    string creator_address = 4;
    string last_transaction_timestamp = 5;
    string last_transaction_version = 6;
    string name = 7;
    string owner_address = 8;
    string property_version = 9;
    string table_type = 10;
    string token_data_id_hash = 11;
    string metadata_uri = 12;
    string payee_address = 13;
}

// graphiql
message AptosAccountTransactions {
    message TokenActivitiesV2 {
        string entry_function_id_str = 1;
        string event_account_address = 2;
        uint64 event_index = 3;
        string from_address = 4;
        string to_address = 5;
        uint64 token_amount = 6;
        string token_data_id = 7;
        string token_standard = 8;
        string transaction_timestamp = 9;
        uint64 transaction_version = 10;
        string type = 11;
        AptosNFTNodeV2Origin current_token_data = 12;
    }
    message AccountTransaction {
        uint64 transaction_version = 1;
        repeated TokenActivitiesV2 token_activities_v2 = 2;
    }
    message Data {
        repeated AccountTransaction account_transactions = 1;
    }
    Data data = 1;
}

message AptosNFTNodeV2Origin {
    string collection_id = 1;
    string token_data_id = 2;
    string description = 3;
    string token_name = 4;
    map<string, string> token_properties = 5;
    string token_standard = 6;
    string token_uri = 7;
    string transaction_timestamp = 8;
}